--- a/univer/first_app/templates/product_list.html
+++ b/univer/first_app/templates/product_list.html
@@ -8,13 +8,14 @@
     <a href="create">Добавить товар</a>
     <h2>Список товаров</h2>
     <table>
-        <thead><th>Id</th><th>Название</th><th>Цена</th><th></th></thead>
+        <thead><th>Id</th><th>ФИО</th><th>Дата Рождения</th><th>Университет</th><th>Год поступления</th><th></th></thead>
         {% for product in products %}
         <tr>
             <td>{{ product.id }}</td>
             <td>{{ product.name }}</td>
-            <td>{{ product.cost }}</td>
+            <td>{{ product.birth }}</td>
             <td>{{ product.univer }}</td>
+            <td>{{ product.year }}</td>
             <td><a href="delete/{{product.id}}">Удалить</a></td>
         </tr>
         {% endfor %}
