--- a/univer/first_app/templates/create_university.html
+++ b/univer/first_app/templates/create_university.html
@@ -11,6 +11,6 @@
     <table>
         {{ form }}
     </table>
-    <input type="submit" value="Send Product" >
+    <input type="submit" value="Создать" >
 </body>
 </html>
