--- a/univer/first_app/templates/product.html
+++ b/univer/first_app/templates/product.html
@@ -5,9 +5,11 @@
     <title>Карточка товара</title>
 </head>
 <body>
-    <h1>Product info</h1>
+    <h1>Информация о студенте</h1>
     <form method="POST">
-        <p>Название товара: {{prod_name}}</p>
-        <p>Цена товара: {{prod_cost}}</p>
+        <p>ФИО: {{prod_name}}</p>
+        <p>Дата рождения: {{prod_birth}}</p>
+        <p>Университет: {{prod_uni}}</p>
+        <p>Год поступления: {{prod_year}}</p>
 </body>
 </html>
