--- a/univer/first_app/templates/university.html
+++ b/univer/first_app/templates/university.html
@@ -5,9 +5,10 @@
     <title>Карточка университета</title>
 </head>
 <body>
-    <h1>Product info</h1>
+    <h1>Карточка университета</h1>
     <form method="POST">
-        <p>Название товара: {{uni_name}}</p>
+        <p>Полное название: {{uni_name}}</p>
         <p>Сокращенное название: {{uni_short_name}}</p>
+        <p>Год основания: {{uni_year}}</p>
 </body>
 </html>
